yamls/ingress-demo/nginx-deploy-ramakrishna.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: nginx-rama
  name: nginx-deploy-ramakrishna
spec:
  replicas: 1
  selector:
    matchLabels:
      run: nginx-rama
  template:
    metadata:
      labels:
        run: nginx-rama
    spec:
      volumes:
      - name: webdata
        emptyDir: {}
      containers: 
      - image: nginx
        name: nginx
        volumeMounts:
        - name: webdata
          mountPath: "/usr/share/nginx/html"

---

---

apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    run: nginx-rama
  name: nginx-deploy-ramakrishna
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: nginx-rama
status:
  loadBalancer: {}
