yamls/ingress-demo/ingress-kibana-eck.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: ingress-kibana
spec:
  ingressClassName: nginx
  rules:
  - host: nginx123.devopsfriends.com
    http:
      paths:
      - path: /kibana
        pathType: Prefix
        backend:
          service:
            name: quickstart-kb-http
            port:
              number: 5601
