yamls/ingress-demo/ingress-kibana-elk.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: ingress-kibana-elk
  namespace: elk
spec:
  ingressClassName: nginx
  rules:
  - host: nginx123.devopsfriends.com
    http:
      paths:
      - path: /kibananew
        pathType: Prefix
        backend:
          service:
            name: kibana-kibana
            port:
              number: 5601
