yamls/ingress-demo/ingress-nginx-main.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt
  name: ingress-nginx-main-blue-red-green
spec:
  ingressClassName: nginx
  rules:
  - host: nginx123.laplastech.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-deploy-main
            port:
              number: 80
      - path: /blue
        pathType: Prefix
        backend:
          service:
            name: nginx-deploy-blue
            port:
              number: 80
      - path: /red
        pathType: Prefix
        backend:
          service:
            name: nginx-deploy-red
            port:
              number: 80
      - path: /green
        pathType: Prefix
        backend:
          service:
            name: nginx-deploy-green
            port:
              number: 80
      - path: /ramakrishna
        pathType: Prefix
        backend:
          service:
            name: nginx-deploy-ramakrishna
            port:
              number: 80

  tls:
  - hosts:
    - nginx123.laplastech.cloud
    secretName: nginx-deploy-cert
